# utfcpp

./: CMakeLists.txt
source/: utf8.h
source/utf8/: checked.h  core.h  unchecked.h
